fix windows encode error